# upat_follower

./: CMakeLists.txt  README.md  package.xml
alfonso_test/: karting_cine.mat  karting_constraint.mat  path_follower.py  to_navigate.mat
config/: atlas_pista.csv  basket.csv  basket_t.csv  cubic-yaw.csv  cubic.csv  cubic_t.csv  optitrack.csv  optitrack_t.csv  square.csv  square_large.csv  square_large_cap_t.csv  square_large_t.csv  square_t.csv  times.csv
config/rviz/: debug.rviz  mision.rviz  test.rviz  ual_set_pose.rviz
data/: cubic.csv  cubic2.csv  cubic_spline.csv  cubic_spline_loyal.csv  figure1.csv  init.csv  interp1.csv  velocities.csv
include/pathFollower/: follower.h  initiator.h  manager.h
include/path_follower/: follower.h  initiator.h  manager.h  manager_simple.h  path_generator.h
include/path_generator_follower/: initiator.h  manager.h  path_follower.h  path_generator.h  path_manager.h
include/uav_path_manager/: follower.h  generator.h  path_follower.h  path_generator.h  path_manager.h  ual_communication.h  visualization.h
include/upat_follower/: follower.h  generator.h  ual_communication.h  visualization.h
launch/: experiment_karting.launch  gtest.test  karting.launch  karting_follower.launch  karting_wo.launch  karting_wo_yaw.launch  karting_yaw.launch  mision.launch  mision_ual.launch  modularNodes.launch  pFollower.launch  plot_ual.launch  real_new_ual.launch  real_server_ual.launch  real_ual_server.launch  real_upat_follower.launch  rosbag.launch  server_ual.launch  sim_basket.launch  sim_empty.launch  sim_karting.launch  sim_new_ual.launch  sim_server_ual.launch  simulation_karting.launch  test.launch  tests_run.test  try_paths.launch  ual_set_pose.launch  visualization.launch
rviz/: debug.rviz  mision.rviz  plot_ual.rviz  tfm.rviz  try_paths.rviz  ual_set_pose.rviz
src/: follower.cpp  follower_node.cpp  generator.cpp  generator_node.cpp  initiator.cpp  initiator_node.cpp  manager.cpp  manager_node.cpp  manager_simple.cpp  manager_simple_node.cpp  multi_uav_log_node.cpp  pFollower.cpp  pManager.cpp  path_follower.cpp  path_follower_node.cpp  path_generator.cpp  path_generator_node.cpp  path_manager.cpp  path_manager_node.cpp  plot_ual.cpp  setup.cpp  test_node.cpp  ual_communication.cpp  ual_communication_node.cpp  ual_set_pose.cpp  visualization.cpp  visualization_node.cpp
srv/: FollowPath.srv  GeneratePath.srv  GenerateTrajectory.srv  GetGeneratedPath.srv  GetGeneratedTrajectory.srv  PreparePath.srv  PrepareTrajectory.srv  UpdatePath.srv  UpdateTrajectory.srv  Visualize.srv
tests/: tests_generator.cpp  tests_manager_simple.cpp  tests_mision.cpp  tests_path_generator.cpp  ual_set_pose.cpp
tests/data/: cubic_spline.csv  cubic_spline_loyal.csv  experiment_path.csv  (+7 more)
(+390 files in other folders)
